@@ -33,6 +33,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #5949: fixed IMAP4_SSL hang when the IMAP server response is
+  missing proper end-of-line termination.
+
 - Fix variations of extending deques:  d.extend(d)  d.extendleft(d)  d+=d
 
 - Issue #1923: Fixed the removal of meaningful spaces when PKG-INFO is 
